# rustconv

./: Cargo.toml  README.md
src/: cli.rs  hotel.rs  input.rs  lib.rs  main.rs  output.rs
testdata/: expected-output.csv  test-hotels.json  test-input.csv
tests/: integration_test.rs
